--- a/less/styles.less
+++ b/less/styles.less
@@ -18,6 +18,8 @@
 @import "settings.less";
 @import "scaffolding.less";
 @import "brandbar.less";
+@import "navbar.less";
+@import "carousel.less";
 @import "content.less";
 @import "signin.less";
 @import "footer.less";
