--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,12 @@
 <footer class="app-footer" id="app-footer" role="contentinfo">
     <div class="app-footer-content">
-        <p>Designed and built by <a href="http://ade25.de" target="_blank">Ade25</a>.</p>
-        <p>Code licensed under
-            <a href="https://github.com/ade25/generator-diazotheme/LICENSE">MIT</a>, documentation under
-            <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</p>
-    </div>
+        <p>&copy; 2014 ADE25 &middot; Designed and built by <a href="http://kreativkombinat.de" target="_blank">KK</a>.</p>
+        <div class="app-social">
+            <ul>
+                <li><a href="https://www.facebook.com/NugzBlackyCustomGuitars"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/NugzBlacky"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UC_VwPXIPe2TxqDlATjbCLyg"><i class="fa fa-youtube"></i></a></li>
+            </ul>
+        </div>
+    </div>    
 </footer>
