--- a/less/application.less
+++ b/less/application.less
@@ -2,14 +2,136 @@
 // Application stylesheet
 // -----------------------------------------------
 
-.app-toolbar + .app-navbar {
-    margin-top: @navbar-height;
+body {
+    background: #efefef;
 }
 
-.app-header {
-    .jumbotron();
+a,
+a:hover,
+a:focus  {
+	outline: none;
+	text-decoration: none;
 }
 
 .app-content {
   .container();
+
+  ul {
+  	list-style-position: inside;
+  	padding: 0;
+  }
 }
+
+.app-section {
+	.container();
+	background: #efefef;
+	margin-bottom: (@line-height-computed * 4);
+
+    .app-heading {
+        margin-bottom: @line-height-computed;
+        padding-bottom: (@line-height-computed / 2);
+        text-transform: uppercase;
+        font-size: @font-size-base * 2;
+
+        i {
+                    color: @app-gray;
+        }
+    }
+}
+
+.intro-section {
+    height: 100%;
+    padding-top: 72px;
+}
+
+.about-section {
+    height: 100%;
+    padding-top: 150px;
+}
+
+.hosting-section {
+    height: 100%;
+    padding-top: 150px;
+}
+
+.customers-section {
+    height: 100%;
+    padding-top: 150px;
+}
+
+.faq-section {
+    height: 100%;
+    padding-top: 150px;
+}
+
+.contact-section {
+    height: 100%;
+    padding-top: 150px;
+}
+
+.imprint-section {
+    height: 100%;
+    padding-top: 150px;
+}
+
+.app-item {
+	border-bottom: 1px solid @app-gray;
+	padding-bottom: (@line-height-computed * 1.5);
+	.clearfix();
+}
+
+.app-content-left {
+    .make-md-column(6);
+    padding-left: 0;
+}
+
+.app-content-right {
+    .make-md-column(6);
+    padding-right: 0;
+}
+
+.app-img {
+    .img-responsive();
+	background: #000;
+}
+
+.embed-responsive {
+	margin-bottom: @line-height-computed;
+}
+
+
+.form-group {
+        margin-bottom: 25px;
+        input,
+        textarea {
+            padding: 20px;
+        }
+        input.form-control {
+            height: auto;
+        }
+        textarea.form-control {
+            height: 252px;
+        }
+    }
+    .form-control:focus {
+        border-color: @brand-primary;
+        box-shadow: none;
+    }
+
+.app-btn {
+    background: @app-gray;
+    color: #fff;
+    text-transform: uppercase;
+}
+
+// Transition lazy loaded images
+// TODO: refactor with custom classes
+.b-lazy {
+    transition: opacity 500ms ease-in-out;
+    max-width: 100%;
+    opacity: 0;
+}
+.b-lazy.b-loaded {
+    opacity: 1;
+}
+
