work-in-progress

--- a/_includes/brandbar.html
+++ b/_includes/brandbar.html
@@ -2,10 +2,10 @@
     <div class="app-brandbar-content">
         <div class="app-brand">
             <div class="app-brand-title">
-                <a class="app-brandname" href="/">
-                    <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/logo.jpg" />
-                    <span class="app-brandname-heading">App Brandname</span>
+                <a class="app-navbar-brand-image page-scroll" href="#page-top">
+                    <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/logo.png" />
                 </a>
+                    <span class="app-brandname-heading">App Brandname</span>
             </div>
             <div class="app-brand-claim">
                 <p class="app-claim">
