--- a/_includes/carousel.html
+++ b/_includes/carousel.html
@@ -14,8 +14,8 @@
         <div class="item item01 active">
           <div class="container">
             <div class="carousel-caption">
-                <h1>ADE 25</h1>
-                <p>Fields of expertise: Development & Hosting</p>
+                <h1>Wir sind eine ON/OFF-LINE MEDIEN AGENTUR mit Sitz in Augsburg.</h1>
+                <p>Wir betreuen Kunden auf der ganzen Welt – ob Großunternehmen, Mittelstand, Existenzgründer oder Privatpersonen.</p>
             </div>
           </div>
         </div>
@@ -23,21 +23,15 @@
           <div class="container">
             <div class="carousel-caption">
              <h1>ADE 25</h1>
-                <p>Fields of expertise: economy & technology</p>
-                <p>Languages: deutsch, english, español, français, hrvatski</p>
-                <p>Certified translator for the French language</p>
-                <p>Member of the Federal Association of Interpreters and Translators (BDÜ)</p>
+                <p>Lokal-Global Prinzip</p>
             </div>
           </div>
         </div>
         <div class="item item03">
           <div class="container">
             <div class="carousel-caption">
-              <h1>ADE 25</h1>
-                <p>Fields of expertise: economy & technology</p>
-                <p>Languages: deutsch, english, español, français, hrvatski</p>
-                <p>Certified translator for the French language</p>
-                <p>Member of the Federal Association of Interpreters and Translators (BDÜ)</p>
+              <h1>Kreativkombinat / Frazil Records</h1>
+                <p>Lassen Sie sich nicht nur sehen, sondern auch hören...</p>
             </div>
           </div>
         </div>
