--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,15 +15,14 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav">
                     <li class="hidden"><a class="page-scroll" href="#page-top"></a></li>
-                    <li><a class="page-scroll" href="#about">About</a></li>
-                    <li><a class="page-scroll" href="#hosting">Hosting</a></li>
-                    <li><a class="page-scroll" href="#customers">Customers</a></li>
-                    <li><a class="page-scroll" href="#faq">FAQ</a></li>
-                    <li><a class="page-scroll" href="#contact">Contact</a></li>
-                    <li><a class="page-scroll" href="#imprint">Imprint</a></li>
-                    <li><a href="https://www.facebook.com/NugzBlackyCustomGuitars"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="https://twitter.com/NugzBlacky"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="https://www.youtube.com/channel/UC_VwPXIPe2TxqDlATjbCLyg"><i class="fa fa-youtube"></i></a></li>
+                    <li><a class="page-scroll" href="#agentur">Agentur</a></li>
+                    <li><a class="page-scroll" href="#leistungen">Leistungen</a></li>
+                    <li><a class="page-scroll" href="#projekte">Projekte</a></li>
+                    <li><a class="page-scroll" href="#kunden">Kunden</a></li>
+                    <li><a class="page-scroll" href="#kontakt">Kontakt</a></li>
+                    <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li>
+                    <li><a href="http://twitter.com/#!/kreativkombinat"><i class="fa fa-twitter"></i></a></li>
+                    <li><a href="https://github.com/a25kk"><i class="fa fa-github"></i></a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
