--- a/less/application.less
+++ b/less/application.less
@@ -41,35 +41,36 @@ a:focus  {
 
 .intro-section {
     height: 100%;
-    padding-top: 72px;
+    padding-top: 125px;
+    background: #000;
 }
 
-.about-section {
+.agentur-section {
     height: 100%;
     padding-top: 150px;
 }
 
-.hosting-section {
+.leistungen-section {
     height: 100%;
     padding-top: 150px;
 }
 
-.customers-section {
+.projekte-section {
     height: 100%;
     padding-top: 150px;
 }
 
-.faq-section {
+.kunden-section {
     height: 100%;
     padding-top: 150px;
 }
 
-.contact-section {
+.kontakt-section {
     height: 100%;
     padding-top: 150px;
 }
 
-.imprint-section {
+.impressum-section {
     height: 100%;
     padding-top: 150px;
 }
