--- a/less/settings.less
+++ b/less/settings.less
@@ -6,7 +6,7 @@
 // Green (rgb: 142, 192, 94)
 @app-primary:                   #8ec05e;
 // Red (rgb: 237, 98, 98)
-@app-danger:                    #ed6262;
+@app-danger:                    #009bce;
 // Gray
 @app-gray:                      #5a5f64;
 @app-gray-light:                #e3e4e5;
