--- a/less/carousel.less
+++ b/less/carousel.less
@@ -8,22 +8,19 @@
 }
 
 .carousel-caption {
-  .make-md-column(7);
   z-index: 10;
   width: 100%;
-  left: 10%;
+  left: 0%;
   bottom: 10%;
   text-align: left;
   text-shadow: none;
   position: absolute;
+  padding: 0% 5%;
+  background-color: rgba(0, 0, 0, 0.5);
 
   h1 {
-    text-transform: lowercase;
-  }
-
-  p {
-    background-color: rgba(0, 0, 0, 0.5);
-    padding: (@line-height-computed / 3);
+    text-transform: uppercase;
+    font-size: (@font-size-base * 1.5);
   }
 }
 
@@ -48,7 +45,7 @@
 
 /* Declare heights because of positioning of img element */
 .carousel .item {
-  height: 700px;
+  height: 500px;
   background-color: #777;
 }
 .carousel-inner > .item > img {
@@ -59,7 +56,7 @@
   height: 100%;
   
   @media (min-width: @screen-sm-min) {
-    height: 500px;
+    height: 300px;
   }
 }
 
