add basic clients section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <div class="app-content" role="main">
           {{ content }}
     </div>
-
+    {% include clients.html %}
     {% include footer.html %}
     {% include javascript.html %}
     <div class="app-js-slot">
