--- a/less/application.less
+++ b/less/application.less
@@ -75,6 +75,21 @@ a:focus  {
     padding-top: 150px;
 }
 
+.app-clientsbar {
+    border: 1px solid black;
+    display: inline-block;
+    padding: 5%;
+    background: #999;
+
+    ul {
+        list-style-type: none;
+        li {
+            display: inline;
+        }
+        
+    }
+}
+
 .app-item {
 	border-bottom: 1px solid @app-gray;
 	padding-bottom: (@line-height-computed * 1.5);
@@ -135,4 +150,7 @@ a:focus  {
 .b-lazy.b-loaded {
     opacity: 1;
 }
+
+
+
 
