work-in-progress

--- a/less/application.less
+++ b/less/application.less
@@ -75,16 +75,15 @@ a:focus  {
     padding-top: 150px;
 }
 
-.app-clientsbar {
-    border: 1px solid black;
-    display: inline-block;
+.app-clientsbar-content {
+    width: 100%;
     padding: 5%;
-    background: #999;
+    background: #333;
 
     ul {
         list-style-type: none;
         li {
-            display: inline;
+            display: inline-table;
         }
         
     }
@@ -108,7 +107,10 @@ a:focus  {
 
 .app-img {
     .img-responsive();
-	background: #000;
+}
+
+.app-client-logo {
+    .img-responsive();
 }
 
 .embed-responsive {
