--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,46 +1,52 @@
 <div class="app-clientsbar" id="app-clientsbar">
     <div class="app-clientsbar-content">
         <div class="app-clientsbar-title">
+        </div>
             <ul>
-            <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/bghw.png" /></a>
-            </li> 
-            <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/weka.png" /></a>
-            </li> 
-            <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/kjf.png" /></a>
-            </li> 
-            <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/atix.png" /></a>
+            <li><a href="http://bghw.de/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/bghw.png"
+                     alt="BGHW" />
+                </a>
             </li>
-            <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/eos.png" /></a>
-            </li> 
-            <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/hw.png" /></a>
-            </li> 
-            <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/sfw.png" /></a>
-            </li> 
-            <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/capital.png" /></a>
+            <li><a href="http://weka.de/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/weka.png"
+                     alt="WEKA" />
+                </a>
             </li>
-             <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/feldenkrais.png" /></a>
+            <li><a href="http://kjf-augsburg.de/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/kjf.png"
+                     alt="KJF" />
+                </a>
             </li>
-             <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/eisglut.png" /></a>
+            <li><a href="http://atix.de/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/atix.png"
+                     alt="ATIX" />
+                </a>
             </li>
-             <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/capital.png" /></a>
+            <li><a href="http://eisglut.com/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/eisglut.png"
+                     alt="Eisglut" />
+                </a>
             </li>
-             <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/capital.png" /></a>
+            <li><a href="http://androschin.com/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/apc.png"
+                     alt="Androshin & Partner" />
+                </a>
             </li>
-             <li><a class="app-navbar-brand-image page-scroll" href="#page-top">
-                <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/clients/capital.png" /></a>
-            </li>       
+            
+            </ul>      
         </div>
     </div>
 </div>
