work-in-progress

--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -1,13 +1,49 @@
-<div class="app-clientsbar" id="app-clientsbar">
+
+<div class="app-clientsbar kunden-section" id="kunden">
+<div class="app-clientsbar-title"><i class="fa fa-users"></i> Unsere Kunden</div>
     <div class="app-clientsbar-content">
-        <div class="app-clientsbar-title">
-        </div>
+        
             <ul>
             <li><a href="http://bghw.de/">
                 <img class="app-img b-lazy"
                      src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                      data-src="{{ page.base_url }}assets/img/clients/bghw.png"
                      alt="BGHW" />
+                </a>
+            </li>
+            <li><a href="http://eos-verlag.de/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/eos.png"
+                     alt="EOS Verlag" />
+                </a>
+            </li>
+            <li><a href="http://eisglut.com/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/eisglut.png"
+                     alt="Eisglut" />
+                </a>
+            </li>
+            <li><a href="http://streetfootballworld.org/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/sfw.png"
+                     alt="Streetfootballworld" />
+                </a>
+            </li>
+            <li><a href="http://team-a-3.de/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/ta3.png"
+                     alt="Team A 3" />
+                </a>
+            </li>
+            <li><a href="http://humanwealth.de/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/hw.png"
+                     alt="Human Wealth" />
                 </a>
             </li>
             <li><a href="http://weka.de/">
@@ -31,18 +67,25 @@
                      alt="ATIX" />
                 </a>
             </li>
-            <li><a href="http://eisglut.com/">
-                <img class="app-img b-lazy"
-                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                     data-src="{{ page.base_url }}assets/img/clients/eisglut.png"
-                     alt="Eisglut" />
-                </a>
-            </li>
             <li><a href="http://androschin.com/">
                 <img class="app-img b-lazy"
                      src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                      data-src="{{ page.base_url }}assets/img/clients/apc.png"
                      alt="Androshin & Partner" />
+                </a>
+            </li>
+            <li><a href="http://capital-garant.de/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/capital.png"
+                     alt="Capital Garant" />
+                </a>
+            </li>
+            <li><a href="http://feldenkrais-training-vienna.com/">
+                <img class="app-img b-lazy"
+                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                     data-src="{{ page.base_url }}assets/img/clients/ftv.png"
+                     alt="Feldenkrais Training Vienna" />
                 </a>
             </li>
             
