work-in-progress

--- a/less/application.less
+++ b/less/application.less
@@ -135,6 +135,19 @@ a:focus  {
 	margin-bottom: @line-height-computed;
 }
 
+// team spezific rules
+
+.team {
+
+    h2 {
+        font-size: (@font-size-base * 1.5);
+    }
+
+    h3 {
+        font-size: @font-size-base;
+    }
+}
+
 
 .form-group {
     margin-bottom: 25px;
