add team social

--- a/less/application.less
+++ b/less/application.less
@@ -148,6 +148,42 @@ a:focus  {
     }
 }
 
+.app-team-social{
+    display: inline-block;
+    background-color: #fff;
+    width: 100%;
+    padding: (@line-height-computed / 2);
+    
+    ul {
+        list-style-type: none;
+        padding: 0;
+        float: right;
+        margin: 0;
+
+
+        li {
+            display: inline-block;
+            margin-left: 3px;
+            margin-right: 3px;
+            text-align: center;
+                a {
+                    border: 1px solid #666;
+                    border-radius: 50%;
+                    display: inline-block;
+                    height: 36px;
+                    width: 36px;
+                    transition: all 0.2s ease-in-out 0s;
+                    color: #666;
+
+                    i {
+                        font-size: 17px;
+                        line-height: 36px;
+                    }
+                }
+        }
+    }
+}
+
 
 .form-group {
     margin-bottom: 25px;
