--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <section id="agentur" class="app-section agentur-section">
         <h1 class="app-heading"><i class="fa fa-info-circle"></i> Agentur</h1>
-            <p class="app-subheading">Wir arbeiten schnell, zuverlässig, mit Spaß an der Sache und Liebe zur Gestaltung.</p>
+            <p class="app-subheading">Wir arbeiten....GERNE.</p>
         <div class="app-row">
         <div class="app-content-left">
             <img class="app-img b-lazy"
@@ -10,17 +10,17 @@
         </div>
         <div class="app-content-right">
             <h2>Projektbildung</h2>
-                <p>Zwischen der Idee des Kunden, dem geeigneten Lösungsumsatz und dem Endprodukt liegt eine Menge - Zeit, Phantasie, Rework.</p>
+                <p>Zwischen Ihrer Idee, dem geeigneten Lösungsumsatz und dem Endprodukt liegt eine Menge - Zeit, Phantasie, Rework.</p>
                 <p>Daher setzen wir auf <strong>KOMMUNIKATION, KOORDINATION</strong> und <strong>KONTROLLE!</strong> - Eva Gallitzendörfer</p>
-                <p>Um den starren Strukturen etwas kreatives Chaos zu verleihen, geben wir noch etwas <strong>KUNST, CHAOS</strong> und <strong>KREATIVITÄT</strong> hinzu - Serge Davidov und Eduard Davidov.</p>
-                <p>Um das Ganze dann noch in passende Klamotten zu stecken, schneidern wir kurzum aus etwas <strong>PLONE, PYTHON</strong> und <strong>PAPIER</strong> das perfekte Outfit - Christoph Böhner.
+                <p>Um den starren Strukturen etwas produktives Chaos zu verleihen, geben wir noch etwas <strong>KUNST, CHAOS</strong> und <strong>KREATIVITÄT</strong> hinzu - Serge Davidov und Eduard Davidov.</p>
+                <p>Um das Ganze dann noch in passende Klamotten zu stecken, schneidern wir kurzum aus etwas <strong>PLONE, PYTHON</strong> und <strong>PAPIER</strong> das perfekte Outfit - Christoph Böhner.</p>
                 <p>You will love it!</p>
         </div>
         </div>
         <div class="app-row team">
         <div class="app-content-left-fourth">
         <h2>Serge Davidov</h2>
-        <h3>PM &middot; Konzept &middot; Entwicklung &middot; Design</h3>
+        <h3>Der Diplomat</h3>
         <img class="app-img b-lazy"
                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                  data-src="../assets/img/team/sd.png"
@@ -33,12 +33,12 @@
         <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li>
         </ul>
         </div>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+            <p><em>"Das interessiert mich nicht, gibt es nicht."</p>
         </div>
 
          <div class="app-content-left-fourth">
          <h2>Eva Gallitzendörfer</h2>
-         <h3>PM &middot; Konzept &middot; Koordination &middot; Text</h3>
+         <h3>Der Überblick</h3>
          <img class="app-img b-lazy"
                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                  data-src="../assets/img/team/eg.png"
@@ -51,12 +51,12 @@
         <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li>
         </ul>
         </div>
-             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+             <p><em>"Es gibt keinen Berg, den man nicht in kleine, überwindbare Hügel zerkleinern kann."</p>
         </div>
 
          <div class="app-content-left-fourth">
          <h2>Christoph Böhner</h2>
-         <h3>Konzept &middot; Entwicklung &middot; Code &middot; Administration</h3>
+         <h3>Der Visionär</h3>
          <img class="app-img b-lazy"
                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                  data-src="../assets/img/team/cb.png"
@@ -69,13 +69,13 @@
         <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li>
         </ul>
         </div>
-             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+             <p><em>"Alles geht. Aber ist es sinnvoll?"</em></p>
         </div>
         
 
         <div class="app-content-left-fourth">
          <h2>Edo Davidov</h2>
-         <h3>PM &middot; Konzept &middot; Controlling &middot; Design</h3>
+         <h3>Der Ruhepol</h3>
          <img class="app-img b-lazy"
                  src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                  data-src="../assets/img/team/ed.png"
@@ -88,7 +88,7 @@
         <li><a href="https://www.facebook.com/kreativkombinat"><i class="fa fa-facebook"></i></a></li>
         </ul>
         </div>
-             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
+             <p><em>"Was bringt der ganze Erfolg, wenn wir nicht ab und zu innehalten, um zu sehen, was wir bereits erreicht haben."</em></p>
         </div>
         </div>
 
