--- a/_includes/productivity.html
+++ b/_includes/productivity.html
@@ -1,5 +1,5 @@
 <section id="leistungen" class="app-section leistungen-section">
-        <h1 class="app-heading"><i class="fa fa-rocket"></i> Unsere Leistungen</h1>
+        <h1 class="app-heading"><i class="fa fa-rocket"></i> Leistungen</h1>
             <!-- Logo -->
             <div class="app-item">
                 <div class="app-content-left">
@@ -10,11 +10,11 @@
                              alt="Ade25 Hosting" />
                 </div>
                 <div class="app-content-right">
-                    <h2>Philosophie</h2>
+                    <h2>Wie?</h2>
                         <p>Die Köngisdisziplin.</p>
                         <p>Wie? ALLES in EINEM.</p> 
                         <p>Manchmal muss man einen Schritt zurück gehen, um das große Ganze zu erfassen.</p>
-                    <h2>Leistungen</h2>
+                    <h2>Was?</h2>
                         <ul>
                             <li>Logo</li>
                             <li>CI</li>
@@ -32,12 +32,12 @@
                              alt="Ade25 Hosting" />
                 </div>
                 <div class="app-content-right">
-                    <h2>Philosophie</h2>
+                    <h2>Wie?</h2>
                         <p>So vielfältig wie die Menschheit ist auch ihr Bedürfnis, sich zu präsentieren. Ob Großunternehmer, kulturelle oder städtische Institutionen, mittelständisches Unternehmen oder Privatpersonen - alle haben spezifische Anforderungen und Wünsche.</p>
                         <p>Lebe die Vielfalt, lerne sie kennen und werde ihr gerecht.</p>
                         <p>Wie? Bonbon und Blingbling sind OUT - Klar und Intuitiv ist IN.</p> 
                         <p>Wir erfinden die Welt nicht neu - wir nutzen die Synergie des Vorhandenen. OPEN SOURCE.</p>
-                    <h2>Leistungen</h2>
+                    <h2>Was?</h2>
                         <ul>
                             <li>statische Webseiten / Single Page Websites</li>
                             <li>dynamische Webseiten / CMS</li>
@@ -56,11 +56,11 @@
                              alt="Ade25 Hosting" />
                 </div>
                 <div class="app-content-right">
-                    <h2>Philosophie</h2>
+                    <h2>Wie?</h2>
                         <p>Optischer Einklang durch medienübergreifende Harmonie</p>
                         <p>Wie? Wiedererkennungswert in Konzept, Erscheinung und Aufbau.</p> 
                         <p>Die Botschaft ist die Basis.</p>
-                    <h2>Leistungen</h2>
+                    <h2>Was?</h2>
                         <ul>
                             <li>Geschäftspapiere</li>
                             <li>Plakat</li>
@@ -83,12 +83,12 @@
                              alt="Ade25 Hosting" />
                 </div>
                 <div class="app-content-right">
-                    <h2>Philosophie</h2>
+                    <h2>Wie?</h2>
                         <p>Die Welt agiert heutzutage wie ein riesigen Gehirn. Unzählige Synapsen bilden ein Netzwerk, das Informationen in einer rasanten Geschwindigkeit transportiert.</p>
                         <p>Wir nutzen dieses Netzwerk in all seiner Vielfalt.</p>
                         <p>Wie? Jeder hat viele Außendienstmitarbeiter: die Webseite, die Printmedien, die sozialen Netzwerke.</p> 
                         <p>Haben Ihre Außendienstmitarbeiter genug zu tun?</p>
-                    <h2>Leistungen</h2>
+                    <h2>Was?</h2>
                         <ul>
                             <li>Ersteinrichtung</li>
                             <li>Betreuung</li>
@@ -107,12 +107,12 @@
                              alt="Ade25 Hosting" />
                 </div>
                 <div class="app-content-right">
-                    <h2>Philosophie</h2>
+                    <h2>Wie?</h2>
                         <p>Wer sucht, soll finden:</p>
                         <p>Das, was er braucht. Gut und klar aufgebaut. Intuitiv bedienbar und unschlagbar einfach.</p>
                         <p>Wie? Höre auf deinen gesunden Menschenverstand und kenne die Tricks.</p> 
                         <p>Ich bin auch ein User...</p>
-                    <h2>Leistungen</h2>
+                    <h2>Was?</h2>
                         <ul>
                             <li>Beratung</li>
                             <li>Analyse</li>
@@ -122,20 +122,20 @@
                 </div>
             </div>
 
-            <!-- Diverse -->
+            <!-- Multimedia -->
             <div class="app-item">
                 <div class="app-content-left">
-                    <h2>Diverse</h2>
+                    <h2>Multimedia</h2>
                         <img class="app-img b-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../assets/img/customer.jpg"
                              alt="Ade25 Hosting" />
                 </div>
                 <div class="app-content-right">
-                    <h2>Philosophie</h2>
+                    <h2>Wie?</h2>
                         <p>Wem das nötige Werkzeug fehlt, dem stehen viele Handwerker zur Seite.</p>
                         <p>Fotografen, Texter, Musiker, Künstler, Techniker ...</p> 
-                    <h2>Leistungen</h2>
+                    <h2>Was?</h2>
                         <ul>
                             <li>Textwork</li>
                             <li>Fotografie</li>
