--- a/_includes/productivity.html
+++ b/_includes/productivity.html
@@ -1,5 +1,6 @@
 <section id="leistungen" class="app-section leistungen-section">
         <h1 class="app-heading"><i class="fa fa-rocket"></i> Leistungen</h1>
+
             <!-- Logo -->
             <div class="app-item">
                 <div class="app-content-left">
@@ -22,6 +23,7 @@
                         </ul>
                 </div>
             </div>
+
             <!-- Web -->
             <div class="app-item">
                 <div class="app-content-left">
@@ -35,7 +37,7 @@
                     <h2>Wie?</h2>
                         <p>So vielfältig wie die Menschheit ist auch ihr Bedürfnis, sich zu präsentieren. Ob Großunternehmer, kulturelle oder städtische Institutionen, mittelständisches Unternehmen oder Privatpersonen - alle haben spezifische Anforderungen und Wünsche.</p>
                         <p>Lebe die Vielfalt, lerne sie kennen und werde ihr gerecht.</p>
-                        <p>Wie? Bonbon und Blingbling sind OUT - Klar und Intuitiv ist IN.</p> 
+                        <p>Wie? Bonbon und Blingbling sind OUT - Klar und Intuitiv sind IN.</p> 
                         <p>Wir erfinden die Welt nicht neu - wir nutzen die Synergie des Vorhandenen. OPEN SOURCE.</p>
                     <h2>Was?</h2>
                         <ul>
@@ -46,10 +48,11 @@
                         </ul>
                 </div>
             </div>
-            <!-- Print -->
+
+            <!-- Hosting -->
             <div class="app-item">
                 <div class="app-content-left">
-                    <h2>Print</h2>
+                    <h2>Hosting</h2>
                         <img class="app-img b-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../assets/img/customer.jpg"
@@ -57,18 +60,41 @@
                 </div>
                 <div class="app-content-right">
                     <h2>Wie?</h2>
-                        <p>Optischer Einklang durch medienübergreifende Harmonie</p>
-                        <p>Wie? Wiedererkennungswert in Konzept, Erscheinung und Aufbau.</p> 
-                        <p>Die Botschaft ist die Basis.</p>
+                        <p>Eine Webseite braucht ein gutes Zuhause. Sie möchte gehegt und gepflegt werden - gewartet und backupiert.</p>
+                        <p>Unser Mantra: Sicherheit - Support - Stabilität</p>
+                        <p>Wie? Nach den neuesten Standards. Mit einem kompetenten Umfeld. Nach klaren Strukturen.</p> 
                     <h2>Was?</h2>
                         <ul>
-                            <li>Geschäftspapiere</li>
-                            <li>Plakat</li>
-                            <li>Flyer</li>
-                            <li>Broschüre</li>
-                            <li>Katalog</li>
-                            <li>Aufkleber</li>
-                            <li>u.v.m.</li>
+                            <li>Hostingpaket D (Domainhosting)</li>
+                            <li>Hostingpaket S (statisches Webseitenhosting)</li>
+                            <li>Hostingpaket P (dynamisches Webseitenhosting: Plone, Wordpress)</li>
+                            <li>Hostingpaket I (dediziertes Serverhosting)</li>
+                        </ul>
+                </div>
+            </div>
+
+
+            <!-- SEO -->
+            <div class="app-item">
+                <div class="app-content-left">
+                    <h2>SEO</h2>
+                        <img class="app-img b-lazy"
+                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                             data-src="../assets/img/customer.jpg"
+                             alt="Ade25 Hosting" />
+                </div>
+                <div class="app-content-right">
+                    <h2>Wie?</h2>
+                        <p>Wer sucht, soll finden:</p>
+                        <p>Das, was er braucht. Gut und klar aufgebaut. Intuitiv bedienbar und unschlagbar einfach.</p>
+                        <p>Wie? Höre auf deinen gesunden Menschenverstand und kenne die Tricks.</p> 
+                        <p>Ich bin auch ein User...</p>
+                    <h2>Was?</h2>
+                        <ul>
+                            <li>Beratung</li>
+                            <li>Analyse</li>
+                            <li>Zieldefinition</li>
+                            <li>Umsetzung</li>
                         </ul>
                 </div>
             </div>
@@ -97,10 +123,10 @@
                 </div>
             </div>
 
-            <!-- SEO -->
+            <!-- Print -->
             <div class="app-item">
                 <div class="app-content-left">
-                    <h2>SEO</h2>
+                    <h2>Print</h2>
                         <img class="app-img b-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../assets/img/customer.jpg"
@@ -108,24 +134,26 @@
                 </div>
                 <div class="app-content-right">
                     <h2>Wie?</h2>
-                        <p>Wer sucht, soll finden:</p>
-                        <p>Das, was er braucht. Gut und klar aufgebaut. Intuitiv bedienbar und unschlagbar einfach.</p>
-                        <p>Wie? Höre auf deinen gesunden Menschenverstand und kenne die Tricks.</p> 
-                        <p>Ich bin auch ein User...</p>
+                        <p>Optischer Einklang durch medienübergreifende Harmonie</p>
+                        <p>Wie? Wiedererkennungswert in Konzept, Erscheinung und Aufbau.</p> 
+                        <p>Die Botschaft ist die Basis.</p>
                     <h2>Was?</h2>
                         <ul>
-                            <li>Beratung</li>
-                            <li>Analyse</li>
-                            <li>Zieldefinition</li>
-                            <li>Umsetzung</li>
+                            <li>Geschäftspapiere</li>
+                            <li>Plakat</li>
+                            <li>Flyer</li>
+                            <li>Broschüre</li>
+                            <li>Katalog</li>
+                            <li>Aufkleber</li>
+                            <li>u.v.m.</li>
                         </ul>
                 </div>
             </div>
 
-            <!-- Multimedia -->
+            <!-- Content -->
             <div class="app-item">
                 <div class="app-content-left">
-                    <h2>Multimedia</h2>
+                    <h2>Content</h2>
                         <img class="app-img b-lazy"
                              src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                              data-src="../assets/img/customer.jpg"
