--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
     <a href="#content" class="sr-only sr-only-focusable">Skip to main content</a>
     <!-- App master nav -->
     {% include navbar.html %}
-    {% include carousel.html %}
+    {% include intro.html %}
 
     <div class="app-content" role="main">
           {{ content }}
