--- a/_includes/brandbar.html
+++ b/_includes/brandbar.html
@@ -3,7 +3,7 @@
         <div class="app-brand">
             <div class="app-brand-title">
                 <a class="app-navbar-brand-image page-scroll" href="#page-top">
-                    <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/logo.png" />
+                    {% include logo.html %}
                 </a>
                     <span class="app-brandname-heading">App Brandname</span>
             </div>
