--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="app-navbar-brand-image page-scroll" href="#page-top">
-                    <img class="app-brandname-logo" src="{{ page.base_url }}assets/img/logo.png" />
+                    {% include logo.html %}
                 </a>
             </div>
             <div class="collapse navbar-collapse navbar-ex1-collapse">
