--- a/less/application.less
+++ b/less/application.less
@@ -3,7 +3,8 @@
 // -----------------------------------------------
 
 body {
-    background: #efefef;
+    background: #fff;
+    color: #666;
 }
 
 a,
@@ -24,7 +25,7 @@ a:focus  {
 
 .app-section {
 	.container();
-	background: #efefef;
+	background: transparent;
 	margin-bottom: (@line-height-computed * 4);
 
     .app-heading {
@@ -39,31 +40,6 @@ a:focus  {
     }
 }
 
-.intro-section {
-    height: 100%;
-    //padding-top: 125px;
-    background: transparent;
-}
-
-.app-intro-info {
-    .container();
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    top: 20%;
-    text-align: center;
-    color: #fff;
-    border-top: 10px solid #fff;
-    border-bottom: 10px solid #fff;
-    h1 {
-        text-transform: uppercase;
-    }
-    @media (min-width: @screen-sm-min) {
-        top: 40%;
-    }
-}
 
 .agentur-section {
     height: 100%;
