--- a/less/settings.less
+++ b/less/settings.less
@@ -16,6 +16,7 @@
 @brand-primary:                 @app-danger;
 
 @font-family-base:              'Open Sans', @font-family-sans-serif;
+@font-family-heading:           'Oswald', @font-family-sans-serif;
 
 // Font awesome font path
 @fa-font-path:                  "../../assets/fonts";
