--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -1,12 +1,15 @@
 <!--Video Section-->
 <section class="intro-section">
-  <video autoplay loop muted poster="screenshot.jpg" id="background">
+  <video autoplay loop muted poster="../assets/img/cover.jpg" id="background">
         <source src="../assets/img/drops.mp4" type="video/mp4">
     </video>
+    <div class="app-intro-brand">
+        {% include logo.html %}
+        </div>
         <div class="app-intro-info">
-          <h1>Wir sind eine ON/OFF-LINE MEDIEN AGENTUR<br /> mit Sitz in Augsburg.</h1>
-            <p>Wir betreuen Kunden auf der ganzen Welt – ob Großunternehmen, Mittelstand, Existenzgründer oder Privatpersonen.</p>
-            <p>Sie äußern Ihre Wünsche – wir schaffen eine Lösung.</p>
+        
+          <h1>Wir sind eine ON/OFF-LINE MEDIEN AGENTUR mit Sitz in Augsburg.</h1>
+            <p>Wir betreuen Kunden auf der ganzen Welt – ob Großunternehmen, Mittelstand, Existenzgründer oder Privatpersonen. Sie äußern Ihre Wünsche – wir schaffen eine Lösung.</p>
         </div>
 </section>
 <!--Video Section Ends Here-->
