--- a/_includes/webfonts.html
+++ b/_includes/webfonts.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
   WebFontConfig = {
-    google: { families: [ 'Open+Sans:400,600,700,300:latin' ] }
+    google: { families: [ 'Open+Sans:400,600,700,300:latin', 'Oswald:400,700' ] }
   };
   (function() {
     var wf = document.createElement('script');
