--- a/less/intro.less
+++ b/less/intro.less
@@ -1,3 +1,60 @@
+.intro-section {
+    height: 100%;
+    //padding-top: 125px;
+    background: transparent;
+}
+
+.app-intro-info {
+    .container();
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 30%;
+    text-align: center;
+    color: #fff;
+    border-top: 10px solid #fff;
+    border-bottom: 10px solid #fff;
+    padding: @line-height-computed 0;
+    h1 {
+        text-transform: uppercase;
+        font-size: 2.1rem;
+        font-family: @font-family-heading;
+        margin-top: 0;
+    }
+    p {
+        font-size: 0.6rem;
+        text-transform: uppercase;
+        margin-bottom: 0;
+    }
+    @media (min-width: @screen-sm-min) {
+        top: 50%;
+    }
+}
+
+.app-intro-brand {
+    .container();
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
+    top: 30%;
+    text-align: center;
+    padding: @line-height-computed;
+    .logo {
+        .img-responsive();
+        width: 100%;
+        opacity: 0.2;
+    path {
+        fill: #fff;
+        }
+    }
+}
+
+
+
 #background {
     //position: fixed;
     //top: 50%;
@@ -9,7 +66,7 @@
     //z-index: -100;
     //-webkit-transform: translateX(-50%) translateY(-50%);
     //transform: translateX(-50%) translateY(-50%);
-    background: url(../assets/img/01.jpg) no-repeat center center;
+    background: url(../assets/img/cover.jpg) no-repeat center center;
     background-size: cover;
 }
 .container h1 {
