--- a/less/navbar.less
+++ b/less/navbar.less
@@ -5,12 +5,23 @@
 }
 
 .app-navbar-brand-image {	
-	padding: 0;
+	padding: 0 (@line-height-computed / 2);
 	float: left;
+	.logo {
+		.img-responsive();
+		height: 30px;
+		width: 400px;
+	}
+}
+
+.logo {
+	.img-responsive();
+	max-width: 900px;
+	width: 100%;
 }
 
 .app-brandname-logo {
-	width: 100%;
+	
 }
 
 .app-navbar {
@@ -32,7 +43,7 @@
 	}
 	.app-navbar-collapse {
 		padding: 20px 0 10px 0;
-		background: #000;
+		background: #666;
 		a {
 			color: #777 !important;
 		}
