--- a/_includes/intro.html
+++ b/_includes/intro.html
@@ -4,7 +4,7 @@
         <source src="../assets/img/drops.mp4" type="video/mp4">
     </video>
     <div class="app-intro-brand">
-        {% include logo.html %}
+        {% include kk.html %}
         </div>
         <div class="app-intro-info">
         
