--- a/less/intro.less
+++ b/less/intro.less
@@ -40,16 +40,26 @@
     margin-right: auto;
     left: 0;
     right: 0;
-    top: 30%;
+    top: 20%;
     text-align: center;
     padding: @line-height-computed;
+    width: 100%;
     .logo {
         .img-responsive();
         width: 100%;
         opacity: 0.2;
-    path {
-        fill: #fff;
-        }
+    }
+    .kk {
+        .img-responsive();
+        height: 500px;
+        width: 500px;
+        opacity: 0.3;
+        margin-left: auto;
+        margin-right: auto;
+        background: #000;
+        border-radius: 50%;
+        padding: 5%;
+        border: 10px solid #999;
     }
 }
 
